--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,9 +1,70 @@
 @import '~bootstrap/scss/bootstrap';
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,100,900);
 
+
+.btn-primary {
+  background-color:  rgb(202, 191, 191);;
+  margin: 0px auto;
+  opacity: 0.8;
+}
+#button {
+  padding: .5em;
+  font-size: 5px;
+  display: inline-block;
+  margin: 0px auto;
+
+
+}
+// button {
+//     display: inline-block;
+// }
+
+// .topnav {
+//   background-color: rgb(202, 191, 191);
+//   // background-color: white;
+//   // overflow: hidden;
+//   opacity: 0.8;
+// }
+
+// /* Style the links inside the navigation bar */
+// .topnav a {
+//   float: right;
+//   color:black;
+//   text-align: center;
+//   padding: 20px 24px;
+//   text-decoration: none;
+//   font-size: 17px;
+// }
+
+// /* Change the color of links on hover */
+// .topnav a:hover {
+//   background-color: #ddd;
+//   color:lighten red;
+// }
+
+// /* Add a color to the active/current link */
+// .topnav a.active {
+//   // background-color: #4CAF50;
+//   // color: white;
+// }
+// ul.dropdown-lr {
+//   width: 300px;
+// }
+
+/* mobile fix */
+// @media (max-width: 768px) {
+// 	.dropdown-lr h3 {
+// 		color: #eee;
+// 	}
+// 	.dropdown-lr label {
+// 		color: #eee;
+// 	}
+// }
 //colors
-$red: #E1332D;
-$white: #fff;
+// $red: #E1332D;
+// $white: #fff;
+
+
 
 //base styles
 
@@ -19,10 +80,12 @@ body {
   box-sizing: border-box;
   height: 100%;
   width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 body {
-  background: $red;
+  // background: $red;
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
 }
@@ -31,16 +94,17 @@ body {
     display: flex;
     flex-direction: column;
     height: 100%;
-    justify-content: center;
+    margin-top: 2em;
     text-align: center;
     width: 100%;
 }
 
 .container {
-    align-items: center;
+  align-items: center;
   display: flex;
-    flex-direction: column;
-    justify-content: center;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 10em;
   padding: 1em;
   text-align: center;
 
@@ -52,9 +116,15 @@ body {
 
 h1 {
   color: $white;
-  font-size: 1.25em;
-  font-weight: 900;
-  margin: 0 0 2em;
+  font-family: 'Lobster', cursive;
+  text-shadow: -1px -1px 0  rgb(202, 191, 191),
+        3px -3px 0 rgb(0, 0, 0),
+        -3px 3px 0 white,
+        3px 3px 0 #000;
+  font-size: 10.25em;
+  font-weight: 500;
+  // margin: 0 0 2em;
+  position: relative;
 
   @media (min-width: 450px) {
     font-size: 1.75em;
@@ -66,9 +136,22 @@ h1 {
 
   @media (min-width: 900px) {
     font-size: 5.25em;
-    margin: 0 0 1em;
+    // margin: 0 0 1em;
   }
 }
+
+
+h2 {
+  color: $white;
+  // margin-top: 2em;
+}
+// h2 {
+//   color: $white;
+//   font-family:
+//   font-size: 50px;
+//   font-weight: 900;
+//   position: relative;
+// }
 
 p {
   color: $white;
@@ -110,7 +193,7 @@ p {
   color: #fff;
   cursor: pointer;
   // display: block;
-  font-size:16px;
+  font-size:14px;
   font-weight: 400;
   line-height: 45px;
   margin: 0 0 2em;
@@ -188,375 +271,293 @@ p {
 //button two
 //////////////////////////
 .btn-2 {
-    letter-spacing: 0;
+  background: darken($red, 1.5%);
+  font-weight: 100;
+
+  svg {
+    height: 45px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+  }
+
+  rect {
+    fill: none;
+    stroke: #fff;
+    stroke-width: 2;
+    stroke-dasharray: 422, 0;
+      transition-delay: none;
+  }
 }
 
-.btn-2:hover,
-.btn-2:active {
-  letter-spacing: 5px;
+.btn-2:hover {
+  background: rgba($red, 0);
+  font-weight: 900;
+  letter-spacing: 1px;
+
+  rect {
+    stroke-width: 5;
+    stroke-dasharray: 15, 310;
+    stroke-dashoffset: 48;
+    transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
+  }
 }
 
-.btn-2:after,
-.btn-2:before {
-  backface-visibility: hidden;
-  border: 1px solid rgba(#fff, 0);
-  bottom: 0px;
-  content: " ";
-  display: block;
-  margin: 0 auto;
-  position: relative;
-  transition: all 280ms ease-in-out;
-  width: 0;
-}
+//     letter-spacing: 0;
+// }
 
-.btn-2:hover:after,
-.btn-2:hover:before {
-  backface-visibility: hidden;
-  border-color: #fff;
-  transition: width 350ms ease-in-out;
-  width: 70%;
-}
+// .btn-2:hover,
+// .btn-2:active {
+//   letter-spacing: 5px;
+// }
 
-.btn-2:hover:before {
-  bottom: auto;
-  top: 0;
-  width: 70%;
-}
+// .btn-2:after,
+// .btn-2:before {
+//   backface-visibility: hidden;
+//   border: 1px solid rgba(#fff, 0);
+//   bottom: 0px;
+//   content: " ";
+//   display: block;
+//   margin: 0 auto;
+//   position: relative;
+//   transition: all 280ms ease-in-out;
+//   width: 0;
+// }
+
+// .btn-2:hover:after,
+// .btn-2:hover:before {
+//   backface-visibility: hidden;
+//   border-color: #fff;
+//   transition: width 350ms ease-in-out;
+//   width: 70%;
+// }
+
+// .btn-2:hover:before {
+//   bottom: auto;
+//   top: 0;
+//   width: 70%;
+// }
 
 /////////////////////////////
 //button -3
 ///////////////////////////
 .btn-3 {
-  background: lighten($red, 3%);
-  border: 1px solid darken($red, 4%);
-  box-shadow: 0px 2px 0 darken($red, 5%), 2px 4px 6px darken($red, 2%);
-  font-weight: 900;
-  letter-spacing: 1px;
-  transition: all 150ms linear;
+  background: darken($red, 1.5%);
+  font-weight: 100;
+
+  svg {
+    height: 45px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+  }
+
+  rect {
+    fill: none;
+    stroke: #fff;
+    stroke-width: 2;
+    stroke-dasharray: 422, 0;
+      transition-delay: none;
+  }
 }
 
 .btn-3:hover {
-  background: darken($red, 1.5%);
-  border: 1px solid rgba(#000, .05);
-  box-shadow: 1px 1px 2px rgba(#fff, .2);
-  color: lighten($red, 18%);
-  text-decoration: none;
-  text-shadow: -1px -1px 0 darken($red, 9.5%);
-  transition: all 250ms linear;
+  background: rgba($red, 0);
+  font-weight: 900;
+  letter-spacing: 1px;
+
+  rect {
+    stroke-width: 5;
+    stroke-dasharray: 15, 310;
+    stroke-dashoffset: 48;
+    transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
+  }
 }
 
-/////////////////////////////
-//button-4
-///////////////////////////
-.btn-4 {
-  border: 1px solid;
-  overflow: hidden;
-  position: relative;
+//   background: lighten($red, 3%);
+//   // border: 1px solid darken($red, 4%);
+//   // box-shadow: 0px 2px 0 darken($red, 5%), 2px 4px 6px darken($red, 2%);
+//   border: 1px solid;
+//   overflow: hidden;
+//   position: relative;
 
-  span {
-    z-index: 20;
+//   span {
+//     z-index: 20;
+//   }
+
+//   &:after {
+//     background: #fff;
+//     content: "";
+//     height: 155px;
+//     left: -75px;
+//     opacity: .0;
+//     position: absolute;
+//     top: -50px;
+//     transform: rotate(35deg);
+//     transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+//     width: 50px;
+//     z-index: -10;
+//   }
+// }
+
+// .btn-3:hover {
+
+//   &:after {
+//     left: 120%;
+//     transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+//   }
+// }
+
+// // .btn-3 {
+// //   background: lighten($red, 3%);
+// //   border: 1px solid darken($red, 4%);
+// //   box-shadow: 0px 2px 0 darken($red, 5%), 2px 4px 6px darken($red, 2%);
+// //   font-weight: 900;
+// //   letter-spacing: 1px;
+// //   transition: all 150ms linear;
+// // }
+
+// // .btn-3:hover {
+// //   background: darken($red, 1.5%);
+// //   border: 1px solid rgba(#000, .05);
+// //   box-shadow: 1px 1px 2px rgba(#fff, .2);
+// //   color: lighten($red, 18%);
+// //   text-decoration: none;
+// //   text-shadow: -1px -1px 0 darken($red, 9.5%);
+// //   transition: all 250ms linear;
+// // }
+
+// /////////////////////////////
+// //button-4
+// ///////////////////////////
+.btn-4 {
+  background: darken($red, 1.5%);
+  font-weight: 100;
+
+  svg {
+    height: 45px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
   }
 
-  &:after {
-    background: #fff;
-    content: "";
-    height: 155px;
-    left: -75px;
-    opacity: .2;
-    position: absolute;
-    top: -50px;
-    transform: rotate(35deg);
-    transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
-    width: 50px;
-    z-index: -10;
+  rect {
+    fill: none;
+    stroke: #fff;
+    stroke-width: 2;
+    stroke-dasharray: 422, 0;
+      transition-delay: none;
   }
 }
 
 .btn-4:hover {
+  background: rgba($red, 0);
+  font-weight: 900;
+  letter-spacing: 1px;
 
-  &:after {
-    left: 120%;
-    transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+  rect {
+    stroke-width: 5;
+    stroke-dasharray: 15, 310;
+    stroke-dashoffset: 48;
+    transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
   }
 }
+
+//   border: 1px solid;
+//   overflow: hidden;
+//   position: relative;
+
+//   span {
+//     z-index: 20;
+//   }
+
+//   &:after {
+//     background: #fff;
+//     content: "";
+//     height: 155px;
+//     left: -75px;
+//     opacity: .2;
+//     position: absolute;
+//     top: -50px;
+//     transform: rotate(35deg);
+//     transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+//     width: 50px;
+//     z-index: -10;
+//   }
+// }
+
+// .btn-4:hover {
+
+//   &:after {
+//     left: 120%;
+//     transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+//   }
+// }
 
 /////////////////////////////
 //button-5
 ///////////////////////////
 .btn-5 {
-  border: 0 solid;
-  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
-  outline: 1px solid;
-  outline-color: rgba(255, 255, 255, .5);
-  outline-offset: 0px;
-  text-shadow: none;
-  transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+    background: darken($red, 1.5%);
+    font-weight: 100;
+
+    svg {
+      height: 45px;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 100%;
+    }
+
+    rect {
+      fill: none;
+      stroke: #fff;
+      stroke-width: 2;
+      stroke-dasharray: 422, 0;
+        transition-delay: none;
+    }
+  }
+
+  .btn-4:hover {
+    background: rgba($red, 0);
+    font-weight: 900;
+    letter-spacing: 1px;
+
+    rect {
+      stroke-width: 5;
+      stroke-dasharray: 15, 310;
+      stroke-dashoffset: 48;
+      transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
+    }
+  }
+
+//   border: 0 solid;
+//   box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
+//   outline: 1px solid;
+//   outline-color: rgba(255, 255, 255, .5);
+//   outline-offset: 0px;
+//   text-shadow: none;
+//   transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+// }
+
+// .btn-5:hover {
+//   border: 1px solid;
+//   box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+//   outline-color: rgba(255, 255, 255, 0);
+//   outline-offset: 15px;
+//   text-shadow: 1px 1px 2px #427388;
+// }
+.footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: rgb(202, 191, 191);
+  text-align: center;
+  opacity: 0.8;
 }
 
-.btn-5:hover {
-  border: 1px solid;
-  box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
-  outline-color: rgba(255, 255, 255, 0);
-  outline-offset: 15px;
-  text-shadow: 1px 1px 2px #427388;
-}
-
-$m: #283ee8;
-$iconmargin: 35px;
-//Took about 100 more lines than I expected
-body {
-   background-color: rgb(22, 79, 202);
-   overflow-x:hidden;
-   .base {
-      z-index: 90;
-      position: fixed;
-      top: 0px;
-      left: 0px;
-      background-color: rgb(255, 255, 255);
-      width: 98px;
-      height: 98px;
-      transition: all 1s cubic-bezier(0.50, -0.75, 0.05, 1);
-      border-bottom-right-radius: 100%;
-      //overflow:hidden;
-      .menu {
-         z-index: 100;
-         background-color: #FFFFFF;
-         position: absolute;
-         top: 0px;
-         left: 0px;
-         width: 100px;
-         height: 100px;
-         border-bottom-right-radius: 200px;
-         cursor: pointer;
-         transition: all 1s cubic-bezier(0.50, -0.75, 0.05, 1), background-color 1s ease;
-         .icon {
-            position: absolute;
-            width: 25px;
-            height: 25px;
-            top: 50%;
-            left: 50%;
-            transform: translate(-100%, -100%);
-            &:before,
-            &:after {
-               content: '';
-               transform: rotate(0deg);
-               transition: top 0.5s ease 0.5s, transform 0.5s ease, background-color 0.75s ease 0.25s;
-            }
-            .bar,
-            &:before,
-            &:after {
-               position: absolute;
-               height: 5px;
-               left: 0px;
-               right: 0px;
-               border-radius: 5px;
-               background-color: $m;
-            }
-            .bar {
-               transition: opacity 0s linear 0.5s, background-color 0.75s ease 0.25s;
-               opacity: 1;
-               top: 10px;
-            }
-            &:before {
-               top: 0px;
-            }
-            &:after {
-               top: initial;
-               top: 20px;
-            }
-         }
-      }
-      .icons {
-         z-index: 98;
-         position: absolute;
-         top:0px;
-         left:0px;
-         >* {
-            position: absolute;
-            font-size:40px;
-            color:$m;
-            transition: 0.3s cubic-bezier(0.50, -0.25, 0.05, 1);
-         }
-         .fa-user {
-            top:$iconmargin;
-            left:0px;
-            transition-delay:0.2s;
-         }
-         .fa-calendar-o {
-            top:0px;
-            left:0px;
-            color:#fff;
-            transition-delay:0.1s;
-         }
-         .fa-tachometer {
-            top:0px;
-            left:$iconmargin;
-         }
-      }
-      .section { //Overview of the arc: https://codepen.io/k-ya/pen/qrgZpx
-         z-index: 96;
-         position: absolute;
-         top:0px;
-         left:0px;
-         height:0px;
-         width:0px;
-         transform-origin: 100% 100%;
-         transform:rotate(135deg);
-         .cover1 {
-            transform-origin: 100% 100%;
-            &,
-            .cover2,
-            .cover2 .content {
-               position: absolute;
-               width: 600px;
-               height: 600px;
-            }
-            &,
-            .cover2 {
-               top: 50%;
-               left: 50%;
-               transform: translate(-100%, -100%) rotate(4deg);
-               overflow: hidden;
-               pointer-events:none;
-               transition:transform 0.5s ease-in;
-            }
-            .cover2 {
-               transform: translate(50%, -50%) rotate(-8deg);
-               transform-origin: 0% 100%;
-               .content {
-                  width: 150px;
-                  height: 150px;
-                  border-radius: 100%;
-                  background-color: #EE1B59;
-                  top: 100%;
-                  left: 0%;
-                  transform: translate(-50%, -50%);
-                  transition: background-color 0s, width 1.5s cubic-bezier(0.50, -0.5, 0.05, 1) 0s, height 1.5s cubic-bezier(0.50, -0.5, 0.05, 1) 0s;
-                  pointer-events: auto;
-               }
-            }
-         }
-      }
-      .section-static {
-         z-index: 94;
-         width:100px;
-         height:100px;
-         position: absolute;
-         top:0px;
-         left:0px;
-         transform-origin:0% 0%;
-         transition: width 1s cubic-bezier(0.50, -0.75, 0.05, 1), height 1s cubic-bezier(0.50, -0.75, 0.05, 1);
-         &:hover {
-            background-color:#EAEAEA;
-         }
-         &.top {
-            transform:rotate(-45deg);
-            border-bottom-right-radius: 400px;
-         }
-         &.bottom {
-            transform:rotate(45deg);
-            border-bottom-right-radius:400px;
-         }
-      }
-      &.close {
-         width: 300px;
-         height: 300px;
-         transition: all 1.25s cubic-bezier(0.50, 0, 0.05, 1.75);
-         .menu {
-            width: 150px;
-            height: 150px;
-            transition: all 1s cubic-bezier(0.50, 0, 0.05, 1.75), background-color 1s ease;
-            background-color: $m;
-            .icon {
-               .bar,
-               &:before,
-               &:after {
-                  background-color: #FFFFFF;
-               }
-               .bar {
-                  opacity: 0;
-               }
-               &:before,
-               &:after {
-                  transition: top 0.5s linear, transform 0.5s ease 0.5s, background-color 0.75s ease 0.25s;
-               }
-               &:before {
-                  top: 10px;
-                  transform: rotate(-45deg);
-               }
-               &:after {
-                  top: 10px;
-                  transform: rotate(45deg);
-               }
-            }
-         }
-         .icons {
-            position: absolute;
-            top:0px;
-            left:0px;
-            >* {
-               position: absolute;
-               font-size:40px;
-               color:$m;
-               transition: 0.3s cubic-bezier(0.50, 0, 0.05, 1.75) 0.7s;
-               pointer-events:none;
-            }
-            .fa-user {
-               top:$iconmargin;
-               left:200px;
-            }
-            .fa-calendar-o {
-               top:141px;
-               left:141px;
-               color:#fff;
-               transition-delay:0.65s;
-            }
-            .fa-tachometer {
-               top:200px;
-               left:$iconmargin;
-               transition-delay:0.8s;
-            }
-         }
-         .section {
-            .cover1 {
-               transform-origin: 100% 100%;
-               &,
-               .cover2,
-               .cover2 .content {
-                  position: absolute;
-                  width: 600px;
-                  height: 600px;
-               }
-               &,
-               .cover2 {
-                  top: 50%;
-                  left: 50%;
-                  transform: translate(-100%, -100%) rotate(16deg);
-                  overflow: hidden;
-                  transition:transform 0.5s ease-in 0.5s;
-               }
-               .cover2 {
-                  transform: translate(50%, -50%) rotate(-32deg);
-                  transform-origin: 0% 100%;
-                  .content {
-                     border-radius: 100%;
-                     background-color: #EE1B59;
-                     top: 100%;
-                     left: 0%;
-                     transform: translate(-50%, -50%);
-                     transition: background-color 0s, width 1.1s cubic-bezier(0.50, 0, 0.05, 1.75) 0.25s, height 1.1s cubic-bezier(0.50, 0, 0.05, 2) 0.25s;
-                     &:hover {
-                        background-color:#DD1350;
-                     }
-                  }
-               }
-            }
-         }
-         .section-static {
-            width:300px;
-            height:300px;
-            transition: width 1.25s cubic-bezier(0.50, 0, 0.05, 2), height 1.25s cubic-bezier(0.50, 0, 0.05, 2);
-         }
-      }
-   }
-}
